Match correct element names between js,html,css

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ div#instruction {
         margin: 0px 5px 5px 0px;
 }
 
-div#canvas {
+div#bezierCanvasDiv {
         background: #FFFFFF;
         border: 1px;
         margin: 0px 0px 0px 0px;
